# Mouse_Profile_Collector

./: .env  .gitignore  README.md  batcher_para.py  batcher_single.py  env_macos.yml  env_ubuntu.yml  muscut.py  muscut_with_rembg.py  pyproject.toml
muscut_functions/: cutting_functions.py  cv_functions.py
muscut_models/custom_cnn/: README.md
muscut_models/custom_yolo/: README.md
muscut_tools/: all_extract.py  kmeans.py  kmeans_image_extractor.py  kmeans_ok_frames.py  muscut_cutting.py  muscut_default.py  muscut_extract_ok_frames.py  muscut_sex_determination.py  muscut_sex_determination_multi.py  muscut_sex_determination_yokogao.py
readme_jp/: README.md
webui/: .gitignore  README.md  USER_MANUAL.md  app.py  focus_preview.py  launch.py  model_check_preview.py  settings.json
webui/static/: style.css
webui/templates/: error.html  index.html  job.html  model_check.html  settings.html
