[project]
name = "mouse-profile-collector"
version = "0.1.0"
description = "Mouse face profile extraction tools and WebUI."
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
  "coremltools==8.3.0; sys_platform == 'darwin'",
  "coremltools==7.1; sys_platform != 'darwin'",
  "flask>=3.0,<4.0",
  "getch==1.0",
  "keras-cv==0.9.0; sys_platform == 'darwin'",
  "keras-cv==0.8.2; sys_platform != 'darwin'",
  "matplotlib>=3.8,<3.9",
  "numpy>=1.26,<1.27",
  "onnxruntime==1.18.0; sys_platform != 'darwin'",
  "onnxruntime==1.19.0; sys_platform == 'darwin'",
  "onnxruntime-gpu==1.18.0; sys_platform != 'darwin'",
  "opencv-python==4.8.1.78; sys_platform == 'darwin'",
  "opencv-python==4.9.0.80; sys_platform != 'darwin'",
  "opencv-python-headless==4.8.1.78; sys_platform == 'darwin'",
  "opencv-python-headless==4.9.0.80; sys_platform != 'darwin'",
  "rembg[gpu]==2.0.53; sys_platform == 'darwin'",
  "rembg[gpu]==2.0.53; sys_platform != 'darwin'",
  "rich>=13.6,<14",
  "pytz==2023.3.post1",
  "scikit-image>=0.26,<0.27",
  "scikit-learn>=1.3,<1.4",
  "scipy>=1.16.3,<1.17",
  "seaborn>=0.13,<0.14",
  "tensorflow==2.14.0; sys_platform != 'darwin'",
  "tensorflow==2.15.1; sys_platform == 'darwin'",
  "tensorflow-macos==2.15.1; sys_platform == 'darwin'",
  "tensorflow-metal==1.1.0; sys_platform == 'darwin'",
  "torch==2.0.1; sys_platform == 'darwin'",
  "torch==2.1.2; sys_platform != 'darwin'",
  "torchaudio==2.1.2; sys_platform != 'darwin'",
  "torchvision==0.15.2; sys_platform == 'darwin'",
  "torchvision==0.16.2; sys_platform != 'darwin'",
  "tqdm>=4.66,<5",
  "ultralytics==8.0.219; sys_platform == 'darwin'",
  "ultralytics==8.1.47; sys_platform != 'darwin'",
  "nvidia-cuda-runtime-cu11==11.8.89; sys_platform != 'darwin'",
  "nvidia-cublas-cu11==11.11.3.6; sys_platform != 'darwin'",
  "nvidia-cufft-cu11==10.9.0.58; sys_platform != 'darwin'",
  "nvidia-cudnn-cu11==8.7.0.84; sys_platform != 'darwin'",
  "nvidia-curand-cu11==10.3.0.86; sys_platform != 'darwin'",
  "nvidia-cusolver-cu11==11.4.1.48; sys_platform != 'darwin'",
  "nvidia-cusparse-cu11==11.7.5.86; sys_platform != 'darwin'",
  "nvidia-nccl-cu11==2.16.5; sys_platform != 'darwin'",
  "nvidia-cuda-cupti-cu11==11.8.87; sys_platform != 'darwin'",
  "nvidia-cuda-nvcc-cu11==11.8.89; sys_platform != 'darwin'",
]

[project.optional-dependencies]
linux-gpu = [
  "onnxruntime-gpu",
  "torch",
  "torchaudio",
  "torchvision",
]
macos = []

[tool.uv]
default-groups = []
environments = [
  "sys_platform == 'linux' and platform_machine != 'aarch64'",
  "sys_platform == 'win32'",
  "sys_platform == 'darwin'",
]

[[tool.uv.index]]
name = "pytorch-cu118"
url = "https://download.pytorch.org/whl/cu118"
explicit = true

[tool.uv.sources]
torch = [{ index = "pytorch-cu118", extra = "linux-gpu" }]
torchaudio = [{ index = "pytorch-cu118", extra = "linux-gpu" }]
torchvision = [{ index = "pytorch-cu118", extra = "linux-gpu" }]

[dependency-groups]
dev = [
    "ipykernel>=6.26.0",
    "ipython>=9.13.0",
    "jupyter-client>=8.8.0",
    "jupyter-core>=5.9.1",
    "jupyterlab>=4.4.0",
    "notebook>=7.4.0",
]
